# wordle-solver

./: .gitignore  LICENSE  README.md  setup.cfg  test_wordle.py  wordle.py
.github/workflows/: python-app.yml
src/wordle/: __init__.py
