[metadata]
name = wordle-solver
version = 1.1.0
author = Michael Otty
author_email = michael.otty@gmail.com
description = A wordle solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelotty/wordle-solver
project_urls =
    Bug Tracker = https://github.com/michaelotty/wordle-solver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.package_data]
wordle = word-list.json

[options.packages.find]
where = src